fix tab-content spacing after nav-tabs

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -5603,6 +5603,10 @@ footer {
   margin: 28px 0 50px;
 }
 
+.tab-content {
+  margin-top: 20px;
+}
+
 .settings-entry {
   margin-bottom: 42px;
   max-width: 700px;
